--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,5 +1,10 @@
 @import "~bootstrap/scss/bootstrap";
 
-h1{
-    color: red;
+a{
+    text-decoration: none;
+}
+
+li{
+    list-style: none;
+    font-size: 2rem;
 }
